--- a/Index.html
+++ b/Index.html
@@ -157,7 +157,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="/Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="/IMG_20231020_212854_038.jpeg" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
